адаптация для jdk8 + правка git ignore